<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_APPLICATION" Id="{4af7c6ec-ab2a-4bd2-9a88-99146a17560c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
  MasterAxis              : Tc2_MC2.AXIS_REF;

  MasterPower             : Tc2_MC2.MC_Power;
  MasterReset             : Tc2_MC2.MC_Reset;
  MasterHalt              : Tc2_MC2.MC_Halt;
  MasterMoveVelo          : Tc2_MC2.MC_MoveVelocity;

  MoveData                : ST_MOVE_DATA;    // dynamic constraints for move commands
  GearData                : ST_GEAR_DATA;    // dynamic constraints and positions for GearIn/GearInPosCa

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>